[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Music.gd" type="Script" id=1]
[ext_resource path="res://Music/godot.mp3" type="AudioStream" id=2]
[ext_resource path="res://Music/dripping-water-nature-sounds-8050.mp3" type="AudioStream" id=3]
[ext_resource path="res://Music/dungeon-air-6983.mp3" type="AudioStream" id=4]
[ext_resource path="res://Music/scary-creaking-knocking-wood-6103.mp3" type="AudioStream" id=5]
[ext_resource path="res://Music/large-metal-lift-door-openingwav-14459.mp3" type="AudioStream" id=6]
[ext_resource path="res://Music/growl-101263.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Words/1911-reload-6248.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Words/driving-with-sirens-6766.mp3" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Words/police-radio-chatter-30048.mp3" type="AudioStream" id=10]
[ext_resource path="res://Scenes/nuclear-alarm-6997 (1).mp3" type="AudioStream" id=11]

[node name="Music" type="Node2D"]
script = ExtResource( 1 )

[node name="AmbientMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="WaterAmbient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.146
bus = "Music"

[node name="AmbientAir" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.634
bus = "Music"

[node name="ambientnoises" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="DoorOpeningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"

[node name="Grow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Ammo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SirensBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="PoliceBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="sirene" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
